--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -2,22 +2,26 @@
 <html lang="en">
 <head>
     {% block head %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block style %}{% endblock %}
-    <title>{% block title %}{% endblock %}</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block style %}
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    {% endblock %}
+        <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
 <body>
-    {% block navbar %}
-    <div id=navbar>
-        <a href="index">Home</a>
-        <a href="upload">Upload Documents</a>
-        <a href="view">View Documents</a>
-        <a href="profile">Profile</a>
-    </div>
-    {% endblock %}
+    <div class="container">
+        {% block navbar %}
+            <div id=navbar>
+                <a href="index">Home</a>
+                <a href="upload">Upload Documents</a>
+                <a href="view">View Documents</a>
+                <a href="profile">Profile</a>
+            </div>
+        {% endblock %}
 
-    <div id="content">{% block content %}{% endblock %}</div>
+        <div id="content">{% block content %}{% endblock %}</div>
+        </div>
 </body>
 </html>
