--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block style %}{{ super() }}{% endblock %}
-{% block title %}Upload{% endblock %}
+
+{% block title %}Home Page{% endblock %}
 
 {% block navbar %}{{ super() }}{% endblock %}
 
