--- a/frontend/templates/signUp.html
+++ b/frontend/templates/signUp.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block style %}{{ super() }}{% endblock %}
 {% block title %}Sign Up{% endblock %}
 
 {% block navbar %}<!--no links for singup-->{% endblock %}
