upload/pull files from db

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -17,6 +17,7 @@
             <a href="upload">Upload Documents</a>
             <a href="view">View Documents</a>
             <a href="profile">Profile</a>
+            <a href="http://localhost:5000/logout">Logout</a>
         </div>
     {% endblock %}
 
