--- a/frontend/templates/launch.html
+++ b/frontend/templates/launch.html
@@ -43,7 +43,7 @@
                             <i class="icon-screen-desktop m-auto text-primary"></i>
                         </div>
                         <h3>Create an Account</h3>
-                        <p class="lead mb-0">When you sign up, you will be asked to take a few pictures of yourself. This will act as your "password."</p>
+                        <p class="lead mb-0">When you sign up, you will be asked to upload a picture of yourself. This will act as your "password."</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -52,7 +52,7 @@
                             <i class="icon-layers m-auto text-primary"></i>
                         </div>
                         <h3>On Our End</h3>
-                        <p class="lead mb-0">Everytime you log in, you will be requiered to take a new picture of yourself. This picture will be disgarded after our AI verfies your identity!</p>
+                        <p class="lead mb-0">To login you have to upload any picture that shows your face, our face recognition software checks to make sure its you!</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
