--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -34,7 +34,7 @@
                             <div class="row row-space">
                                 <div class="col-2">
                                     <div class="input-group-desc">
-                                        <input class="input--style-5" type="text" name="username">
+                                        <input required class="input--style-5" type="text" name="username">
                                     </div>
                                 </div>
                                 
@@ -47,7 +47,7 @@
                         <br></br>
                         <div class="value">
                             <div class="input-group">
-                                <input class="input--style-5" type="file" id="image" name="image" accept="image/*" >
+                                <input required class="input--style-5" type="file" id="image" name="image" accept="image/*" >
                                 
                             </div>
                         </div>
@@ -57,7 +57,7 @@
                         <div class="name">Security Question #1</div>
                         <div class="value">
                             <div class="input-group">
-                                <input class="input--style-5" type="text" name="sec1">
+                                <input required class="input--style-5" type="text" name="sec1">
                                 <label class="label--desc">What's your favorite movie?</label>
                             </div>
                         </div>
@@ -67,7 +67,7 @@
                         <div class="name">Security Question #2</div>
                         <div class="value">
                             <div class="input-group">
-                                <input class="input--style-5" type="text" name="sec2">
+                                <input required class="input--style-5" type="text" name="sec2">
                                 <label class="label--desc">Who was your favorite professor?</label>
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                         <div class="name">Security Question #3</div>
                         <div class="value">
                             <div class="input-group">
-                                <input class="input--style-5" type="text" name="sec3">
+                                <input required class="input--style-5" type="text" name="sec3">
                                 <label class="label--desc">Who was your first kiss?</label>
                             </div>
                         </div>
